crates/iroha_primitives_derive/tests/ui/fail/numeric_empty.rs
//! `numeric!` must reject empty invocations.

use iroha_primitives_derive::numeric;

fn main() {
    let _ = numeric!();
}
